--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
-+<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Testing for cnpm nang cao</title>
-    <a>holy shit chua lam bai cua son</a>
-</head>
-<body>
+
+<h1>Random Quote Generator</h1>
+<div class="white-box">
+  <div class="quote">
+    <i class="fa fa-quote-left fa-3x"></i> 
+    <p class="random-quote"> <span id="text"></span></p>
+  </div>
+  <div class="random-author">- <span id="author"></span>
+  </div>
+  <div class= "buttons">
     
-</body>
-</html>
+<a id="tweet" href=""https://twitter.com/intent/tweet"" title="Tweet this!"><button class= "button"><i class= "fa fa-twitter"></i></button></a>
+    
+    <div class= "new-quote-button" >
+    <button class="button" id="new-quote"> New Quote
+    </div>
+  </div>
+</div>
